fix wrapping issue on small screen for research items

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -302,6 +302,14 @@ font-size: 16px;
       padding: 0 !important;
     }
 }
+
+.research-primary-content-container {
+    @include media-query($on-small-screen) {
+      width: 100% !important;
+      padding-right: 0 !important;
+    }
+}
+
 .research-title {
   font-size: 18px;
   letter-spacing: -1px;
